--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -12,7 +12,7 @@
     - [親子関係?](#親子関係)
     - [IK,FKとは](#ikfkとは)
     - [キャラクターのオブジェクトとアーマチュアの関係は？](#キャラクターのオブジェクトとアーマチュアの関係は)
-  - [アーマチュアを設定してみよう](#アーマチュアを設定してみよう)
+  - [やってみようPart1](#やってみようpart1)
     - [簡単な人型モデルを作ろう](#簡単な人型モデルを作ろう)
     - [中心のアーマチュアを設定しよう](#中心のアーマチュアを設定しよう)
     - [左半身の足を設定しよう](#左半身の足を設定しよう)
@@ -69,7 +69,11 @@
 ---
 
 
-## アーマチュアを設定してみよう
+## やってみようPart1
+アーマチュアを設定してみよう
+
+---
+
 ### 簡単な人型モデルを作ろう
 
 ---
