--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -88,6 +88,7 @@
 - SZ でテールをおへそのあたりに
 - EZで押し出しながら、「脊髄」「胸」「胸上部」「首」「頭」を作る
 - 名前をRoot,Hips,Spine,Chest,UpperChest,Neck,Headと変更
+- Object Data PropertyのViewPortDisplayで、Namesにチェックを入れてみやすくしよう
 
 ---
 
@@ -95,9 +96,9 @@
 - 先に左半身のみ作成していく
 - Hipsのテールから下向きに押し出し(EZ)
 - RelationsのConnectedのチェックを外す
-- 左足の付け根から膝あたりに移動(G Shift+Y)、スケール(SZ)する(上腿)
+- 左足の付け根から膝あたりに移動(G Shift+X)、スケール(SZ)する(上腿)
 - 膝から押し出して(EZ)くるぶしあたりまで(下腿)
-- さらに押し出して(E Shift+X)、指の付け根まで
+- さらに押し出して(E Shift+Y)、指の付け根まで
 - さらに押し出して(E Y)、指先まで作成する
 - 名前をUpperLeg, LowerLeg, Foot, Toesと変更
 
