--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -76,6 +76,7 @@
 
 ### 簡単な人型モデルを作ろう
 - ちゃちゃっと作ってくれてもいいし、3回目モデリングのPart2のデータをコピーしてもいいよ。
+- -Yから見た時に正面からみた状態に回転しておこう
   
 ---
 
@@ -96,18 +97,18 @@
 - 先に左半身のみ作成していく
 - Hipsのテールから下向きに押し出し(EZ)
 - RelationsのConnectedのチェックを外す
-- 左足の付け根から膝あたりに移動(G Shift+X)、スケール(SZ)する(上腿)
+- 左足の付け根から膝あたりに移動(G Shift+Y)、スケール(SZ)する(上腿)
 - 膝から押し出して(EZ)くるぶしあたりまで(下腿)
-- さらに押し出して(E Shift+Y)、指の付け根まで
-- さらに押し出して(E X)、指先まで作成する
+- さらに押し出して(E Shift+X)、指の付け根まで
+- さらに押し出して(E Y)、指先まで作成する
 - 名前をUpperLeg, LowerLeg, Foot, Toesと変更
 
 ---
 
 ### 左半身の腕を設定しよう
-- UpperChestのテールから横に押し出し(EY)
+- UpperChestのテールから横に押し出し(EX)
 - RelationsのConnectedのチェックを外す
-- 肩・上腕・前腕・手をEYで作成
+- 肩・上腕・前腕・手をEXで作成
 - 名前をShoulder, UpperArm, LowerArm, Handと変更
 
 ---
