--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -82,14 +82,13 @@
 
 ### 中心のアーマチュアを設定しよう
 - Shift+AでArmatureを追加
-- Viewport DisplayでIn Frontにチェックで随時オブジェクトに埋もれずにみえるようになる
-- EZで押し出す
+- Viewport DisplayでNames, In Frontにチェックでボーン名と随時オブジェクトに埋もれずにみえるようになる
+- Editモードに入りEZで押し出す
 - RelationsのConnectedのチェックを外す
 - GZ でヘッドを股のあたりに
 - SZ でテールをおへそのあたりに
 - EZで押し出しながら、「脊髄」「胸」「胸上部」「首」「頭」を作る
 - 名前をRoot,Hips,Spine,Chest,UpperChest,Neck,Headと変更
-- Object Data PropertyのViewPortDisplayで、Namesにチェックを入れてみやすくしよう
 
 ---
 
