--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -122,6 +122,7 @@
 ---
 
 ### オブジェクトとアーマチュアを関連づけよう
+- オブジェクトモードに戻す
 - オブジェクトを選択してからアーマチュアを選択(順番大事！)
 - Ctrl+Pして
 - Armature Deform - Automatic Weight
