--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -19,6 +19,7 @@
     - [左半身の腕を設定しよう](#左半身の腕を設定しよう)
     - [右を対称にして作成しよう](#右を対称にして作成しよう)
     - [オブジェクトとアーマチュアを関連づけよう](#オブジェクトとアーマチュアを関連づけよう)
+    - [関連付けを見てみよう](#関連付けを見てみよう)
     - [ポーズモードで動かしてみよう](#ポーズモードで動かしてみよう)
     - [微調整(授業ではやらない)](#微調整授業ではやらない)
     - [指も設定したい人用(授業ではやらない)](#指も設定したい人用授業ではやらない)
@@ -77,7 +78,8 @@
 ### 簡単な人型モデルを作ろう
 - ちゃちゃっと作ってくれてもいいし、3回目モデリングのPart2のデータをコピーしてもいいよ。
 - -Yから見た時に正面からみた状態に回転しておこう
-  
+- Mirror,Subdivision SurfaceモディファイアはApplyして、メッシュを細分化しておこう。
+
 ---
 
 ### 中心のアーマチュアを設定しよう
@@ -127,8 +129,17 @@
 - Ctrl+Pして
 - Armature Deform - Automatic Weight
 
+--- 
+### 関連付けを見てみよう
+- アーマチュア・オブジェクトの順で選択
+- ウェイトペイントモードに入ろう
+- ボーンをセレクトすると、オブジェクトのどの部分が影響されるかがわかる
+- きちんと動かすにはここの調整が必要
+
 ---
 ### ポーズモードで動かしてみよう
+- 
+
 
 ---
 ---
