--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -80,6 +80,8 @@
 - -Yから見た時に正面からみた状態に回転しておこう
 - Mirror,Subdivision SurfaceモディファイアはApplyして、メッシュを細分化しておこう。
 
+[3回目の人型データ](data/20220401t_day03_Part2.blend)
+
 ---
 
 ### 中心のアーマチュアを設定しよう
