--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -152,9 +152,13 @@
 - 手作業でウェイトペイントで修正するとか必要
 - 下の参考やウェイトペイントでググってみよう
 
+
+[参考：Blenderでリギング！モデルを動かしてみよう！～人型リグの作成と割り当て編～【Medium】](https://www.youtube.com/watch?v=C9CWBaZNFeQ){:target="_blank"}
+
 ---
 
 ### 指も設定したい人用(授業ではやらない)
+- 指のあるモデルを作ろう(参考を貼っておく)
 - 指は1本あたり骨が3つあるので、1本作ってShift+Dで複製しよう
 - HandのテールからEZで押し出し
 - RelationsのConnectedのチェックを外す
@@ -171,7 +175,7 @@
 | 薬指     | Ring   |
 | 小指     | Little |
 
-[参考：Blenderでリギング！モデルを動かしてみよう！～人型リグの作成と割り当て編～【Medium】]{https://www.youtube.com/watch?v=C9CWBaZNFeQ}{target="_blank"}
+[Low Polyキャラクターモデリング解説 手 - Hand modeling](https://www.youtube.com/watch?v=w5Atj2IQBQg){:target="_blank"}
 
 ---
 ---
@@ -212,7 +216,7 @@
 - 例えば、しっぽとかでたくさん骨がある場合、または、動いて欲しい部分が2本まで、とかの場合、Chain Lengthを増やすと、影響を受ける範囲を設定できる
 
 
-[参考：悪魔のBlender入門 IKでボーンを動かしてみよう！！ Blender2.8](https://www.youtube.com/watch?v=Hq7-W2MX010){target="_blank"}
+[参考：悪魔のBlender入門 IKでボーンを動かしてみよう！！ Blender2.8](https://www.youtube.com/watch?v=Hq7-W2MX010){:target="_blank"}
 
 ---
 ---
@@ -232,7 +236,7 @@
 ### 右足や手についても設定してみよう
 
 
-[参考：【Lecture:24 Blender】「IK」ってなに？「コンストレイント」を設定して簡単アニメーションづくり！【Hard】](https://www.youtube.com/watch?v=7IpLp1KE9l4){target="_blank"}
+[参考：【Lecture:24 Blender】「IK」ってなに？「コンストレイント」を設定して簡単アニメーションづくり！【Hard】](https://www.youtube.com/watch?v=7IpLp1KE9l4){:target="_blank"}
 
 ---
 ---
