--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -23,12 +23,12 @@
     - [ポーズモードで動かしてみよう](#ポーズモードで動かしてみよう)
     - [微調整(授業ではやらない)](#微調整授業ではやらない)
     - [指も設定したい人用(授業ではやらない)](#指も設定したい人用授業ではやらない)
-  - [IK,FKをボーンだけで実験してみよう](#ikfkをボーンだけで実験してみよう)
+  - [やってみようPart2](#やってみようpart2)
     - [上腕・前腕に当たる部分を作ろう](#上腕前腕に当たる部分を作ろう)
     - [コントロールするターゲットの実装](#コントロールするターゲットの実装)
     - [肘の向きを決めるポールの実装](#肘の向きを決めるポールの実装)
     - [やらないけど...](#やらないけど)
-  - [人型モデルにIKを設定してみよう](#人型モデルにikを設定してみよう)
+  - [やってみようPart3](#やってみようpart3)
     - [左足のIK設定](#左足のik設定)
     - [右足や手についても設定してみよう](#右足や手についても設定してみよう)
   - [pose library](#pose-library)
@@ -180,7 +180,9 @@
 ---
 ---
 
-## IK,FKをボーンだけで実験してみよう
+## やってみようPart2
+IK,FKをボーンだけで実験してみよう
+
 ### 上腕・前腕に当たる部分を作ろう
 - File - New - General
 - Y軸側からの表示に
@@ -221,7 +223,9 @@
 ---
 ---
 
-## 人型モデルにIKを設定してみよう
+## やってみようPart3
+人型モデルにIKを設定してみよう
+
 ### 左足のIK設定
 - UnderLegのテールからEYで押し出してLegIK.Lとする
 - Parentは空にしておく
