--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -225,17 +225,21 @@ IK,FKをボーンだけで実験してみよう
 
 ## やってみようPart3
 人型モデルにIKを設定してみよう
-
+- Part1のデータをコピーしてPart3にしておこう
+- 
 ### 左足のIK設定
 - UnderLegのテールからEYで押し出してLegIK.Lとする
 - Parentは空にしておく
+- UpperLegのテールからEYで押し出してLegPole.Lとする
+- 同じくParentはからにしておく
 - LowerLeg.Lを選択して、InvertKinematicsを追加
 - TargetにArmature, BoneにLegIK.L
+- Pole TargetにArmature, BoneにLegPole.L
 - Chane Lengthを2に
-- IKの項目の曲がってほしくない方向をロック
-- 制限の数値で、骨折しないように設定
 - 膝からEYで押し出してLegPole.Lとする
 - PoleTargetにArmature, BoneにLegPole.L
+
+やらないけど、必要に応じて、回転軸のロックとか角度制限が可能だよ。
 
 ### 右足や手についても設定してみよう
 
