--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -31,8 +31,7 @@
   - [やってみようPart3](#やってみようpart3)
     - [左足のIK設定](#左足のik設定)
     - [右足や手についても設定してみよう](#右足や手についても設定してみよう)
-  - [pose library](#pose-library)
-  - [ポーズライブラリを利用してみよう](#ポーズライブラリを利用してみよう)
+  - [ポーズライブラリとは？(授業では扱わない)](#ポーズライブラリとは授業では扱わない)
   - [その他(授業では扱わない)](#その他授業では扱わない)
     - [Rigifyについて](#rigifyについて)
     - [MOCAP](#mocap)
@@ -225,6 +224,7 @@ IK,FKをボーンだけで実験してみよう
 
 ## やってみようPart3
 人型モデルにIKを設定してみよう
+
 - Part1のデータをコピーしてPart3にしておこう
 - 
 ### 左足のIK設定
@@ -249,18 +249,23 @@ IK,FKをボーンだけで実験してみよう
 ---
 ---
 
-## pose library
-- 最初にポーズを決めといて、アニメーションに使える
+## ポーズライブラリとは？(授業では扱わない)
+- 全身だけでなく手だけなどのポーズを保存することも可能
+- アーマチュアのポーズをアセットブラウザで管理できる
+- サムネイルはカメラ視点で保存される
+- ポーズを呼び出しながらアニメーションを作成できる
+
+[参考：Ellie Pose Library](https://www.blender.org/download/demo-files/){:target="_blank"}
+
+<!--
+## やってみよう Part4
+- 最初にポーズを作成しておくことができる
+- アニメーションに使える
 - 指定されたボーンに対してなので、手だけ、とか設定可能
 - 全体なら、Aで全部選択
-- NでCreatePoseAssetで追加できるが、管理はAssetBrowserでやらないと
+- NでCreatePoseAssetで追加できるが、管理はAssetBrowserでやらないといけないっぽい。
 - サムネは、CameraViewとなる
-
----
----
-
-## ポーズライブラリを利用してみよう
-
+-->
 
 ---
 ---
