--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -227,6 +227,7 @@ IK,FKをボーンだけで実験してみよう
 - Part1のデータをコピーしてPart3にしておこう
 
 ### 左足のIK設定
+- 両膝の位置を少し前に出しておこう
 - LowerLegのテールからEYで押し出してLegIK.Lとする
 - Parentは空にしておく
 - UpperLegのテールからEYで押し出してLegPole.Lとする
