--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -72,6 +72,8 @@
 ## やってみようPart1
 アーマチュアを設定してみよう
 
+[![](https://img.youtube.com/vi/XjrHzvmNrI4/0.jpg)](https://www.youtube.com/watch?v=XjrHzvmNrI4){:target="_blank"}
+
 ---
 
 ### 簡単な人型モデルを作ろう
@@ -182,6 +184,9 @@
 ## やってみようPart2
 IK,FKをボーンだけで実験してみよう
 
+[![](https://img.youtube.com/vi/2ajUg5xgmng/0.jpg)](https://www.youtube.com/watch?v=2ajUg5xgmng){:target="_blank"}
+
+
 ### 上腕・前腕に当たる部分を作ろう
 - File - New - General
 - Y軸側からの表示に
@@ -223,7 +228,10 @@ IK,FKをボーンだけで実験してみよう
 ---
 
 ## やってみようPart3
-- 人型モデルにIKを設定してみよう
+人型モデルにIKを設定してみよう
+
+[![](https://img.youtube.com/vi/fi3UD1R-d0E/0.jpg)](https://www.youtube.com/watch?v=fi3UD1R-d0E){:target="_blank"}
+
 - Part1のデータをコピーしてPart3にしておこう
 
 ### 左足のIK設定
@@ -232,7 +240,7 @@ IK,FKをボーンだけで実験してみよう
 - Parentは空にしておく
 - UpperLegのテールからEYで押し出してLegPole.Lとする
 - 同じくParentはからにしておく
-- LowerLeg.Lを選択して、InvertKinematicsを追加
+- LowerLeg.Lを選択して、InverseKinematicsを追加
 - TargetにArmature, BoneにLegIK.L
 - Pole TargetにArmature, BoneにLegPole.L
 - Chane Lengthを2に
