--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -28,6 +28,7 @@
   - [やってみよう Part2](#やってみよう-part2)
     - [モデルdownload](#モデルdownload)
     - [地面、背景を作成しよう](#地面背景を作成しよう)
+    - [3点ライティングを試そう](#3点ライティングを試そう)
   - [やってみようPart2+(余裕ある人)](#やってみようpart2余裕ある人)
     - [レンブラントライティングとは？](#レンブラントライティングとは)
   - [カメラの焦点距離,F値等](#カメラの焦点距離f値等)
@@ -167,6 +168,8 @@
 - マテリアルは適当に
 - 画面を分割して、片方はカメラビューにしておこう
 - Light削除して、真っ暗になることを確認しておこう
+
+### 3点ライティングを試そう
 - PointLightを追加して、KeyLight, FillLight, BackLightを適当に置いて、きれいにみえる位置・パラメータを探そう
 
 
