--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -30,6 +30,7 @@
   - [参考](#参考)
     - [Monster Mash(こんなモデリング方法も)](#monster-mashこんなモデリング方法も)
     - [Low Poly Character(英語の動画は字幕使ってみてみよう)](#low-poly-character英語の動画は字幕使ってみてみよう)
+    - [本格的にキャラクター作りたい人向け](#本格的にキャラクター作りたい人向け)
   - [お疲れ様〜](#お疲れ様)
 
 ---
@@ -245,6 +246,9 @@
 - [ローポリキャラクター tutorial1](https://www.youtube.com/watch?v=k5x1I6gwpiU){:target="_blank"}
 - [ローポリキャラクター tutorial2](https://www.youtube.com/watch?v=Ljl_QFs9xhE){:target="_blank"}
 - [ローポリキャラクター tutorial3](https://www.youtube.com/watch?v=Z3vdQj06DGo){:target="_blank"}
+
+### 本格的にキャラクター作りたい人向け
+- [キャラクターモデリング解説](https://www.youtube.com/watch?v=BBtgjTiL1XQ&t=0s){:target="_blank"f}
 
 ---
 ---
