--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -14,7 +14,9 @@
       - [Spot Light](#spot-light)
       - [Area Light](#area-light)
     - [環境テキスチャ](#環境テキスチャ)
+      - [環境テキスチャとは](#環境テキスチャとは)
     - [カメラの設定](#カメラの設定)
+    - [カラーマネージメント](#カラーマネージメント)
     - [レンダリング](#レンダリング)
       - [レンダリングエンジンCycles/Eevee違い](#レンダリングエンジンcycleseevee違い)
       - [レンダープロパティ](#レンダープロパティ)
@@ -58,6 +60,8 @@
 - 発光源は面
 - 指定した方向のみ照らす
 
+<!-- mov_sample_1 4 types of light -->
+
 [参考：４種類のライトとその違いを把握しよう！](https://vtuberkaibougaku.site/2020/10/29/blender-light/){:target="_blank"}
 
 [参考：照らす光を設定する「ライティング」の使い方](https://ytktfeelfree.com/tool/software/blender/how_to_use_lighting_/4138/){:target="_blank"}
@@ -66,6 +70,7 @@
 
 ---
 ### 環境テキスチャ
+#### 環境テキスチャとは
 - 環境テクスチャとは、 周囲環境の映り込みや環境光、間接光などを再現するためのデータ。
 - 多くの場合HDRIと呼ばれるフォーマットが利用される。
 - マテリアルプレビューモードではダミーでHDRIが設定されている
@@ -74,12 +79,32 @@
 
 [参考:](https://reflectorange.net/archives/041.html){:target="_blank"}
 
+<!-- mov_sample_2 How to Download HDRI -->
+<!-- mov_sample_3 Setting up Environment Texture-->
+
 ---
 ### カメラの設定
 - 焦点距離・被写界深度などは実際のカメラと全く変わらない
 - 変わるとすれば、ありえない数値を設定できること
 - オブジェクトを決めて、オートフォーカスみたいなこともできる。
 
+<!-- mov_sample_4 Camera Setting-->
+
+---
+### カラーマネージメント
+- Blenderの画面で見える色はカラーマネージメントされている
+- デフォルトでは「Filmic」となっていて、フォトリアルにみえるようにカラーコレクションされている
+- 意図がある場合には、これを「Standard」等他のモードに変えなくてはいけない
+
+![セッティング](img/mr5-09-CM-setting.png)
+
+- Filmic
+![Filmic](img/mr5-09-CM-filmic.png)
+
+- Standard
+![Standard](img/mr5-09-CM-standard.png)
+
+<!-- mov_sample_5 Camera Setting-->
 ---
 
 ### レンダリング
