--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -20,7 +20,8 @@
     - [レンダリング](#レンダリング)
       - [レンダリングエンジンCycles/Eevee違い](#レンダリングエンジンcycleseevee違い)
       - [レンダープロパティ](#レンダープロパティ)
-      - [出力プロパティ](#出力プロパティ)
+      - [シーンプロパティ(フォーマット・レンジ)](#シーンプロパティフォーマットレンジ)
+      - [シーンプロパティ(出力プロパティ)](#シーンプロパティ出力プロパティ)
       - [OpenEXR MultiLayer(上級者向け)](#openexr-multilayer上級者向け)
     - [3点ライティング](#3点ライティング)
       - [KeyLight](#keylight)
@@ -120,17 +121,31 @@
 - マテリアルもCyclesでないとちゃんと表示できないものもあるので注意
 
 #### レンダープロパティ
-- レンダー・ビューポートの数値が高くなると綺麗になるが、計算に時間がかかる
+- レンダー・ビューポートのSamplingの数値が高くなると綺麗になるが、計算に時間がかかる
 
-#### 出力プロパティ
+![Sampling](img/mr5-09-Rendering-Sampling.png)
+
+- Ambient Occulusion(環境遮蔽したい時)、Bloom(オブジェクトを光らせる時)、Motion Blur(動画の時)にチェックを入れとこう
+  
+![チェック項目](img/mr5-09-Rendering-ChcekItem.png)
+
+#### シーンプロパティ(フォーマット・レンジ)
 - 解像度、アスペクト比はデフォルトだと1920x1080,1:1。必要があれば変更
-- 動画の場合は書き出す開始、終了フレームを指定する。
 - フレームレートはデフォルトで24fps(アニメーション向け)なので、29.97を使いたい人は変更
+- 動画の場合は書き出す開始、開始・終了フレームを指定する。
+
+![解像度・フレームレート](img/mr5-09-Scene-Format.png)
+
+#### シーンプロパティ(出力プロパティ)
 - ファイルフォーマットは静止画ならpng, jpeg
 - 動画はFFmpegVideo(Encoding:Mpeg-4)で基本はOK
 - 他のアプリで利用するために圧縮したくない場合は、連番形式、という静止画複数枚に描き差す方法がある。
 - Compressionは画質の圧縮でなく、レンダリングを圧縮するかどうか、という意味らしい
 - Blenderでは色の管理を「Filmic」というモードをデフォルトとしている。もっと明るくパキッとさせたい時は、Standardに変更した方がよいかも
+
+![静止画](img/mr5-09-Scene-Output-Still.png)
+
+![動画](img/mr5-09-Scene-Output-Movie.png)
 
 #### OpenEXR MultiLayer(上級者向け)
 - 3Dアプリでは、色だけでなく、質感(光沢・ラフネス等)などを画像で出力することができる。
