--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -34,9 +34,9 @@
     - [3点ライティングを試そう](#3点ライティングを試そう)
   - [やってみようPart2+(余裕ある人)](#やってみようpart2余裕ある人)
     - [レンブラントライティングとは？](#レンブラントライティングとは)
-  - [カメラの焦点距離,F値等](#カメラの焦点距離f値等)
 
 ---
+今回は、知識ベースで進める。適宜試して欲しい。最後に3点ライティングをBlenderで試してみる。
 
 ## 基本知識
 ### Lightの種類
@@ -242,9 +242,6 @@ Bump->normal?
 
 [参考：レンブラントライティングで撮るポートレイト](https://shuffle.genkosha.com/technique/lighting/7342.html){:target="_blank"}
 
----
-## カメラの焦点距離,F値等
-Filmic, 標準
 
 
 
