--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -28,7 +28,6 @@
       - [FillLight](#filllight)
       - [BackLight](#backlight)
   - [やってみよう Part1](#やってみよう-part1)
-  - [やってみよう Part2](#やってみよう-part2)
     - [モデルdownload](#モデルdownload)
     - [地面、背景を作成しよう](#地面背景を作成しよう)
     - [3点ライティングを試そう](#3点ライティングを試そう)
@@ -133,7 +132,7 @@
 #### シーンプロパティ(フォーマット・レンジ)
 - 解像度、アスペクト比はデフォルトだと1920x1080,1:1。必要があれば変更
 - フレームレートはデフォルトで24fps(アニメーション向け)なので、29.97を使いたい人は変更
-- 動画の場合は書き出す開始、開始・終了フレームを指定する。
+- 動画の場合は書き出す開始・終了フレームを指定する。
 
 ![解像度・フレームレート](img/mr5-09-Scene-Format.png)
 
@@ -183,12 +182,6 @@
 ---
 
 ## やってみよう Part1
-- 立方体の下にPlaneをおいて、適当に4種類の光をあてて試してみよう。
-
----
----
-
-## やってみよう Part2
 人への照明の当て方(3点ライティング)をBlender上で試してみよう。
 
 ### モデルdownload
