--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -174,8 +174,11 @@
 #### BackLight
 - 対象物の輪郭をはっきりさせるためのライト
 
+![3点ライティング](img/mr5-09-3PL-Human.png)
 
-[参考:ライティングの基礎！映画や写真撮影でも使われている照明技法とは？- 初心者向け簡単解説！]{https://www.youtube.com/watch?v=_bWYZ3lrGHI}{:target="_blank"}
+![3点ライティング 配置](img/mr5-09-3PL-Top.png)
+
+[参考:ライティングの基礎！映画や写真撮影でも使われている照明技法とは？- 初心者向け簡単解説！](https://www.youtube.com/watch?v=_bWYZ3lrGHI){:target="_blank"}
 
 
 ---
@@ -233,6 +236,8 @@ Bump->normal?
 - 顔に立体感が出て、ドラマティックに見える
 - 基本的には人物の鼻筋に対して上方斜め45度から光をあてることで表現できる
 - 光をあてていない方は基本暗くなり、ほほのあたりだけが少し光があたる
+
+
 
 [参考：レンブラントライティングで撮るポートレイト](https://shuffle.genkosha.com/technique/lighting/7342.html){:target="_blank"}
 
