--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -231,6 +231,8 @@ Bump->normal?
 ## やってみようPart2+(余裕ある人)
 レンブラントライティングを試してみよう。
 
+![ショートレンブラント](https://shuffle.genkosha.com/picture/img_tech_lightingstory12_07.jpg)
+
 ### レンブラントライティングとは？
 - ポートレイトなどでよく使われるライティング
 - 顔に立体感が出て、ドラマティックに見える
