--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -14,7 +14,6 @@
       - [Spot Light](#spot-light)
       - [Area Light](#area-light)
     - [環境テキスチャ](#環境テキスチャ)
-      - [環境テキスチャとは](#環境テキスチャとは)
     - [カメラの設定](#カメラの設定)
     - [カラーマネージメント](#カラーマネージメント)
     - [レンダリング](#レンダリング)
@@ -33,6 +32,7 @@
     - [3点ライティングを試そう](#3点ライティングを試そう)
   - [やってみようPart2+(余裕ある人)](#やってみようpart2余裕ある人)
     - [レンブラントライティングとは？](#レンブラントライティングとは)
+  - [お疲れ様](#お疲れ様)
 
 ---
 今回は、知識ベースで進める。適宜試して欲しい。最後に3点ライティングをBlenderで試してみる。
@@ -61,7 +61,7 @@
 - 発光源は面
 - 指定した方向のみ照らす
 
-<!-- mov_sample_1 4 types of light -->
+[![](https://img.youtube.com/vi/oaR1Pc9OocY/0.jpg)](https://www.youtube.com/watch?v=oaR1Pc9OocY){:target="_blank"}
 
 [参考：４種類のライトとその違いを把握しよう！](https://vtuberkaibougaku.site/2020/10/29/blender-light/){:target="_blank"}
 
@@ -71,17 +71,19 @@
 
 ---
 ### 環境テキスチャ
-#### 環境テキスチャとは
 - 環境テクスチャとは、 周囲環境の映り込みや環境光、間接光などを再現するためのデータ。
 - 多くの場合HDRIと呼ばれるフォーマットが利用される。
 - マテリアルプレビューモードではダミーでHDRIが設定されている
 - レンダリングで利用する場合には明示的に環境テキスチャの設定の必要がある。
 - HDRIファイルは[Poly Haven](https://polyhaven.com/){:target="_blank"}が有名。
 
+[![](https://img.youtube.com/vi/Gzm_Cfx7ty8/0.jpg)](https://www.youtube.com/watch?v=Gzm_Cfx7ty8){:target="_blank"}
+
+[![](https://img.youtube.com/vi/ipvbtsPZ8Gg/0.jpg)](https://www.youtube.com/watch?v=ipvbtsPZ8Gg){:target="_blank"}
+
+
 [参考:](https://reflectorange.net/archives/041.html){:target="_blank"}
 
-<!-- mov_sample_2 How to Download HDRI -->
-<!-- mov_sample_3 Setting up Environment Texture-->
 
 ---
 ### カメラの設定
@@ -89,9 +91,10 @@
 - 変わるとすれば、ありえない数値を設定できること
 - オブジェクトを決めて、オートフォーカスみたいなこともできる。
 
-<!-- mov_sample_4 Camera Setting-->
+[![](https://img.youtube.com/vi/lWcx2Zc3A3E/0.jpg)](https://www.youtube.com/watch?v=lWcx2Zc3A3E){:target="_blank"}
 
 ---
+
 ### カラーマネージメント
 - Blenderの画面で見える色はカラーマネージメントされている
 - デフォルトでは「Filmic」となっていて、フォトリアルにみえるようにカラーコレクションされている
@@ -105,7 +108,8 @@
 - Standard
 ![Standard](img/mr5-09-CM-standard.png)
 
-<!-- mov_sample_5 Camera Setting-->
+[参考: 環境テクスチャ（Environment Texture）ノードを使用する場合のノードの組み方](http://cgcompo.blog134.fc2.com/blog-entry-76.html){:target="_blank"}
+
 ---
 
 ### レンダリング
@@ -187,6 +191,8 @@
 ## やってみよう Part1
 人への照明の当て方(3点ライティング)をBlender上で試してみよう。
 
+[![](https://img.youtube.com/vi/NjKVP-1Ygvw/0.jpg)](https://www.youtube.com/watch?v=NjKVP-1Ygvw){:target="_blank"}
+
 ### モデルdownload
 今日は、人の顔にどう照明を当てるか、を試したいので、まずはなるべくリアルなモデルをダウンロードしましょう。
 
@@ -210,23 +216,6 @@
 - PointLightを追加して、KeyLight, FillLight, BackLightを適当に置いて、きれいにみえる位置・パラメータを探そう
 
 
-
-
-<!--
-今日はちゃんとした人の顔を使ってライティングをしてみたいので、次のページからダウンロードしてみよう。
-[健康な人の全身3Dモデル](https://open3dmodel.com/ja/3d-models/healthy-man-full-body_40403.html){:target="_blank"}
-
-ちょっとダウンロードしづらいので動画みながらダウンロードしよう。
-
-1. ダウンロードリンクのテキストをクリック
-2. グレーアウトしてみえるダウンロードをクリック
-3. Objをインポートした後、Textureを貼ってあげないといけない
-Body_Subdermal.jpg
-を貼ればとりあえずどうにかなる
-Bump->normal?
-(質感に関して、もうちょいやりたい)
--->
-
 ---
 ## やってみようPart2+(余裕ある人)
 レンブラントライティングを試してみよう。
@@ -239,12 +228,18 @@ Bump->normal?
 - 基本的には人物の鼻筋に対して上方斜め45度から光をあてることで表現できる
 - 光をあてていない方は基本暗くなり、ほほのあたりだけが少し光があたる
 
-
+[![](https://img.youtube.com/vi/pT92G5pbk0I/0.jpg)](https://www.youtube.com/watch?v=pT92G5pbk0I){:target="_blank"}
 
 [参考：レンブラントライティングで撮るポートレイト](https://shuffle.genkosha.com/technique/lighting/7342.html){:target="_blank"}
 
 
+---
+---
 
+## お疲れ様
+- 最終的なクオリティに大きく影響を与えるのがライティング・レンダリング
+- 設定を高品質にしすぎると、レンダリング時間に影響を与えるので注意
+- ライティングに関しては、3Dだけでなく実写でもいろいろ考えて使っていこう
 
 
 <!-- ## CyclesだとnodeでblackbodyでKelvin使える-->
