--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -30,7 +30,7 @@
     - [モデルdownload](#モデルdownload)
     - [地面、背景を作成しよう](#地面背景を作成しよう)
     - [3点ライティングを試そう](#3点ライティングを試そう)
-  - [やってみようPart2+(余裕ある人)](#やってみようpart2余裕ある人)
+  - [やってみようPart2(余裕ある人)](#やってみようpart2余裕ある人)
     - [レンブラントライティングとは？](#レンブラントライティングとは)
   - [お疲れ様](#お疲れ様)
 
@@ -217,7 +217,7 @@
 
 
 ---
-## やってみようPart2+(余裕ある人)
+## やってみようPart2(余裕ある人)
 レンブラントライティングを試してみよう。
 
 ![ショートレンブラント](https://shuffle.genkosha.com/picture/img_tech_lightingstory12_07.jpg)
