--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -82,7 +82,7 @@
 [![](https://img.youtube.com/vi/ipvbtsPZ8Gg/0.jpg)](https://www.youtube.com/watch?v=ipvbtsPZ8Gg){:target="_blank"}
 
 
-[参考:](https://reflectorange.net/archives/041.html){:target="_blank"}
+[参考:環境テクスチャ（Environment Texture）ノードを使用する場合のノードの組み方](https://reflectorange.net/archives/041.html){:target="_blank"}
 
 
 ---
@@ -108,7 +108,7 @@
 - Standard
 ![Standard](img/mr5-09-CM-standard.png)
 
-[参考: 環境テクスチャ（Environment Texture）ノードを使用する場合のノードの組み方](http://cgcompo.blog134.fc2.com/blog-entry-76.html){:target="_blank"}
+[参考:Filmicカラーマネージメント/適切なライティングのための第一歩。](http://cgcompo.blog134.fc2.com/blog-entry-76.html){:target="_blank"}
 
 ---
 
