--- a/2022/MediaRepresentationV/mr5_10.md
+++ b/2022/MediaRepresentationV/mr5_10.md
@@ -7,24 +7,39 @@
 
 - [メディア表現V 10. グリースペンシル](#メディア表現v-10-グリースペンシル)
   - [目次](#目次)
-  - [何ができる？](#何ができる)
+  - [グリースペンシルとは?](#グリースペンシルとは)
+    - [想定される利用方法](#想定される利用方法)
   - [始め方](#始め方)
-  - [基本](#基本)
+  - [やってみようPart1](#やってみようpart1)
   - [2Dアニメーション](#2dアニメーション)
     - [オブジェクトアニメ](#オブジェクトアニメ)
     - [普通のアニメ(セル画)](#普通のアニメセル画)
     - [棒人間？](#棒人間)
   - [自動補完やってみよう](#自動補完やってみよう)
-  - [どう使えるの？](#どう使えるの)
+  - [参考](#参考)
 
 ---
+作成中...グリースペンシルまだ全然理解してないや...
 
+## グリースペンシルとは?
+- ペイントソフトの様なペン機能を使い、2Dモデル、または3Dモデルを作成出来る機能
+- Blenderは3Dアプリだが、2Dアプリのようにも利用可能
+- アニメーション時に中割(フレーム自動補完機能)が利用できる
+- ペンタブ利用可能
 
-## 何ができる？
-https://www.youtube.com/watch?v=1G4jwD1-c1k
+### 想定される利用方法
+- 2Dアニメーション
+- 3Dコンテ
+- 通常のペイントソフトとして
+- 背景作画への利用
+- 3次元のガイドとして
 
-- 絵が描ける-3D空間に配置される
-- 中割
+[![](https://img.youtube.com/vi/1G4jwD1-c1k/0.jpg)](https://www.youtube.com/watch?v=1G4jwD1-c1k){:target="_blank"}
+
+[![](https://img.youtube.com/vi/pKmSdY56VtY/0.jpg)](https://www.youtube.com/watch?v=pKmSdY56VtY){:target="_blank"}
+
+---
+---
 
 ## 始め方
 最初にGeneralでなく2D Animationを選ぶかまたは
@@ -46,11 +61,16 @@ https://www.youtube.com/watch?v=1G4jwD1-c1k
 - 書いた後、超点数をコントロールできる (トラックパッドだと失敗。マウスホイール必要か？)
 - 頂点でいじりたい時は、エディットモードへ
 
-## 基本
-https://www.youtube.com/watch?v=sMKW--36sN0
+---
+---
+
+## やってみようPart1
+
+[参考：グリースペンシル解説1/基本編](https://www.youtube.com/watch?v=sMKW--36sN0){:target="_blank"}
 
 ## 2Dアニメーション
-https://www.youtube.com/watch?v=jictosxDcCg
+[参考：グリースペンシル解説2/アニメ編](https://www.youtube.com/watch?v=jictosxDcCg){:target="_blank}
+
 ### オブジェクトアニメ
 - アーマチュア追加
 - Ctrl+Pで親子づけ
@@ -81,5 +101,10 @@ https://www.youtube.com/watch?v=xp4BcAaqCgQ
 
 https://www.youtube.com/watch?v=Tscvf_uc5LU
 
-## どう使えるの？
-https://www.youtube.com/watch?v=ninu1gRHmyY
+---
+---
+## 参考
+- 2Dアニメーションを3Dシーンに取り込む
+
+[![](https://img.youtube.com/vi/ninu1gRHmyY/0.jpg)](https://www.youtube.com/watch?v=ninu1gRHmyY){:target="_blank"}
+
