--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -7,89 +7,117 @@
 
 - [メディア表現V 11. 物理演算・パーティクル](#メディア表現v-11-物理演算パーティクル)
   - [目次](#目次)
-  - [物理演算できること](#物理演算できること)
+  - [物理演算](#物理演算)
   - [クロス](#クロス)
-  - [クロス基本](#クロス基本)
-    - [Tシャツ](#tシャツ)
-    - [クロスでアニメーション追従までいきたいな...](#クロスでアニメーション追従までいきたいな)
-  - [シュリンクラップモディファイアーも紹介？](#シュリンクラップモディファイアーも紹介)
+  - [やってみようPart1 クロス基本](#やってみようpart1-クロス基本)
+  - [やってみようPart2 Tシャツを作ろう](#やってみようpart2-tシャツを作ろう)
+  - [やってみようPart3 Tシャツを作ろう(モディファイア編)](#やってみようpart3-tシャツを作ろうモディファイア編)
   - [ソフトボディ](#ソフトボディ)
   - [パーティクル](#パーティクル)
+  - [参考](#参考)
 
 ---
 
 
-## 物理演算できること
-- フォースフィールド
-- コリジョン
-- クロス
-- ダイナミックペイント
-- ソフトボディ
-- 流体
-- リジットボディ
+## 物理演算
+物理演算とは、物体の運動を物理法則に基づき数値計算（シミュレーション）すること。これにより、
+- アニメーション
+- モデリング
 
-リジットボディと流体は実はもうやってしまったね。
-使いこなした例はみせよう。全部は無理
+等を行うことができる。
 
+- リジットボディ(硬いものの挙動)
+- ソフトボディ(柔らかいもの挙動)
+- 流体(液体や気体の挙動)
+- クロス(布の挙動)
+- ダイナミックペイント(オブジェクトの動きに応じた挙動、波等)
+
+
+「リジットボディ」「流体」はもうやってしまったね。(2回目と3回目)。クロスシミュレーションを試してみよう。
+
+---
 
 ## クロス
-- 複雑な形状をモデリングせずに作成
-- アニメーション時に追従
+- 複雑な形状をモデリングせずに作成可能
+- アニメーション時に追従する
+- 面の頂点と頂点を線で結ぶと、縫うことができる
   
-## クロス基本
-- 布のSizeのControl+Aでアプライ忘れずに
-- 細分化は50とか
-- Cloth, Collisionだけだと、布は自分を突き抜けちゃう
-- Cloth-Collision-Self Collisionで回避
-- ギザる時はModifier-SubdivisionSurface
-- Cloth, Subdivisionを入れ替えると精度あがるけど、時間がかかる
-- 毎回計算でなくBakeすることができる。Cache-Bake
-- VertexGroupでPinにして、ClothShapeのPinGroupに指定するとピン留めできる
+## やってみようPart1 クロス基本
+- 布のScaleはCommand+Aでアプライ忘れないようにしょう
+- 細分化を50とかにして、柔らかくなれるようにしよう。
+- 布にCloth, 障害物にCollisionをあてる
+- Clothは自分自信を突き抜けちゃうため、CollisionのSelf Collisionで回避
+- スムーズでない時はShade Smooth, Modifier-SubdivisionSurfaceを当てよう。
+- モディファイアのCloth, SubdivisionSurfaceの順をを入れ替えると精度あがるけど、時間がかかる
+- 毎回計算するのではなくBakeすることができる。Cache-Bake
+- VertexGroupを作成して頂点をアサインし、Cloth - ShapeのPinGroupに頂点グループを指定するとピン留めできる
 
-ここは、紹介くらいかなぁ
+<!-- ここは、紹介くらいかなぁ
 - 選んだ頂点をVertex-Hook-Hook to New Objectにすると、他のObjectと関連づけられる
-- この時、Modifierの順をClothの前に持ってくることが重要
+- この時、Modifierの順をClothの前に持ってくることが重要 -->
 
-https://www.youtube.com/watch?v=252qhBFl2UM
+[参考：Blender Cloth | Beginners Guide | Getting Started](https://www.youtube.com/watch?v=252qhBFl2UM){:target="_blank"}
 
-### Tシャツ
-- 服を作ってみよう
-- 線でつないだところを縫わせることができる
-- とりあえず、簡単に上半身つくる
-- Planeから表の形を作る
-- Subdevide(中心に点がくるように)
-- Promotionalを使って、襟首つくる(頂点グループつくって、ShowHideすると安心)
-- OptionClickでつなぎあわせるところを選択
-- Edit-MenuSearch(F3)でBridgeEdgeLoopでつなぐ
-- Cで面を選択してから、
-- XのFacesで首のところを削除
-- 他はOnlyFacesで削除
-- 人体Collision, 服Cloth
-- ShapeのSewingにCheck,MaxSewingForceは100とか
+## やってみようPart2 Tシャツを作ろう
+- 適当に上半身をつくる
+- Planeを追加して、Tシャツの前面の形を作ろう(少し大きめに)
+- Subdivideしよう(中心に頂点がくるように偶数)
+- 複製して背面に移動
+- Promotional Editingを使って、前面に襟首をつくる。頂点を移動させると、半径に応じて、そのまわりも影響を受ける。
+- ループカット(Option+Click)でつなぎあわせるところを選択
+- Edit-MenuSearch(F3)でBridgeEdgeLoopで頂点をつなぐ
+- 首のところはつなぎ合わせたくないので、面を選択してから、X - Facesで削除
+- 縫い合わせるところはX - OnlyFacesで削除(辺が残る)
+- 人体にCollision, 服Clothを当てる
+- Cloth-ShapeのSewingにCheck,MaxSewingForceは100とか入れてみる
 - 上手くいかない時は、隠れている頂点がないか(Option+H)、重なっている頂点がないか(M ByDistance)を確認しよう
-https://www.youtube.com/watch?v=R1OUUBEu1dE
-
-https://styly.cc/ja/tips/blender-cloth-simulation02/
-
-### クロスでアニメーション追従までいきたいな...
-https://www.youtube.com/watch?v=AbyfuW5Aocg
 
 
-## シュリンクラップモディファイアーも紹介？
-簡単にできるからやっちゃおう
-- cubeで服の形＋首、胴のFaceを削除
-- 服にシュリンクラップ。ターゲットでBodyで終わり
-https://horohorori.com/blender-note/modifiers/deform/about-shrinkwrap-modifier/
+[参考：#04 勇者のBlender物理 クロスシミュレーションで服を作る！！](https://www.youtube.com/watch?v=R1OUUBEu1dE){:target="_blank"}
+
+[参考：クロスシミュレーションで洋服を作ろう（モデリング〜シミュレーション編）](https://styly.cc/ja/tips/blender-cloth-simulation02/){:target="_blank"}
+
+---
+---
+
+## やってみようPart3 Tシャツを作ろう(モディファイア編)
+クロスシミュレーションを使わなくても、シュリンクモディファイアという方法でも作成可能なので、知っておこう。
+シュリンクラップとは「熱で収縮する包装用プラスチックフィルム、を品物にかぶせ、加熱して密封包装すること」で、外側にだいたいの形を作っておいて、物体に、張り付くように変化するよ。
+
+- cubeでだいたいのTシャツの形を作り、首、腕、胴のFaceを削除しよう
+- 服にシュリンクラップモディファイアをあて、ターゲットにBodyを指定する。
+
+[参考:張り付くように変形 (シュリンクラップモディファイアー)](https://horohorori.com/blender-note/modifiers/deform/about-shrinkwrap-modifier/){:target="_blank"}
 
 ## ソフトボディ
-https://www.youtube.com/watch?v=4lqUxQ2XN4o
+できることを紹介しておこう。
+
+[![](https://img.youtube.com/vi/4lqUxQ2XN4o/0.jpg)](https://www.youtube.com/watch?v=4lqUxQ2XN4o){:target="_blank"}
 
 
 ## パーティクル
-https://horohorori.com/blender-note/physics-simulations/about-particles-system/
-- emitter
-- hair
+- 火、煙、霧、及び埃等を表現するemitterタイプ
+- 髪の毛・草等を表現するhairタイプ
+の2種類がある。
 
+
+[参考](https://horohorori.com/blender-note/physics-simulations/about-particles-system/){:target="_blank"}
+
+<!--
 https://www.youtube.com/watch?v=TWZgMg56YMQ
-https://www.youtube.com/watch?v=wHfR0DC-nQc
+-->
 
+---
+---
+## 参考
+- アニメーションで揺れる服
+[Blender Tutorial - Cloth Simulation | Advance Simulation | Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
+
+- ダイナミックペイント
+
+[波をつくる](https://www.youtube.com/watch?v=HdEOZw5o6yE){:target="_blank"}
+
+[ダイナミックペイント付きペイントローラーエフェクト](https://www.youtube.com/watch?v=xrw7-cbtQBA&t=5s){:target="_blank"}
+
+- パーティクル
+[![](https://img.youtube.com/vi/wHfR0DC-nQc/0.jpg)](https://www.youtube.com/watch?v=wHfR0DC-nQc){:target="_blank"}
