--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -52,11 +52,13 @@
 - 毎回計算するのではなくBakeすることができる。Cache-Bake
 - VertexGroupを作成して頂点をアサインし、Cloth - ShapeのPinGroupに頂点グループを指定するとピン留めできる
 
+
+
+[参考：Blender Cloth  Beginners Guide  Getting Started](https://www.youtube.com/watch?v=252qhBFl2UM){:target="_blank"}
+
 <!-- ここは、紹介くらいかなぁ
 - 選んだ頂点をVertex-Hook-Hook to New Objectにすると、他のObjectと関連づけられる
 - この時、Modifierの順をClothの前に持ってくることが重要 -->
-
-[参考：Blender Cloth | Beginners Guide | Getting Started](https://www.youtube.com/watch?v=252qhBFl2UM){:target="_blank"}
 
 ## やってみようPart2 Tシャツを作ろう
 - 適当に上半身をつくる
