--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -15,6 +15,7 @@
   - [ソフトボディ](#ソフトボディ)
   - [パーティクル](#パーティクル)
   - [参考](#参考)
+  - [お疲れ様ー](#お疲れ様ー)
 
 ---
 
@@ -43,6 +44,9 @@
 - 面の頂点と頂点を線で結ぶと、縫うことができる
   
 ## やってみようPart1 クロス基本
+
+[![](https://img.youtube.com/vi/WcsSTwRVEVg/0.jpg)](https://www.youtube.com/watch?v=WcsSTwRVEVg){:target="_blank"}
+
 - 布のScaleはCommand+Aでアプライ忘れないようにしょう
 - 細分化を50とかにして、柔らかくなれるようにしよう。
 - 布にCloth, 障害物にCollisionをあてる
@@ -61,12 +65,15 @@
 - この時、Modifierの順をClothの前に持ってくることが重要 -->
 
 ## やってみようPart2 Tシャツを作ろう
+
+[![](https://img.youtube.com/vi/-0xmB7zP9YE/0.jpg)](https://www.youtube.com/watch?v=-0xmB7zP9YE){:target="_blank"}
+
 - 適当に上半身をつくる
 - Planeを追加して、Tシャツの前面の形を作ろう(少し大きめに)
-- Subdivideしよう(中心に頂点がくるように偶数)
+- Subdivideしよう(中心に頂点がくるように奇数)
 - 複製して背面に移動
 - Promotional Editingを使って、前面に襟首をつくる。頂点を移動させると、半径に応じて、そのまわりも影響を受ける。
-- ループカット(Option+Click)でつなぎあわせるところを選択
+- ループ選択(Option+Click)でつなぎあわせるところを選択
 - Edit-MenuSearch(F3)でBridgeEdgeLoopで頂点をつなぐ
 - 首のところはつなぎ合わせたくないので、面を選択してから、X - Facesで削除
 - 縫い合わせるところはX - OnlyFacesで削除(辺が残る)
@@ -85,6 +92,8 @@
 ## やってみようPart3 Tシャツを作ろう(モディファイア編)
 クロスシミュレーションを使わなくても、シュリンクモディファイアという方法でも作成可能なので、知っておこう。
 シュリンクラップとは「熱で収縮する包装用プラスチックフィルム、を品物にかぶせ、加熱して密封包装すること」で、外側にだいたいの形を作っておいて、物体に、張り付くように変化するよ。
+
+[![](https://img.youtube.com/vi/bNydFPySEJA/0.jpg)](https://www.youtube.com/watch?v=bNydFPySEJA){:target="_blank"}
 
 - cubeでだいたいのTシャツの形を作り、首、腕、胴のFaceを削除しよう
 - 服にシュリンクラップモディファイアをあて、ターゲットにBodyを指定する。
@@ -113,6 +122,7 @@ https://www.youtube.com/watch?v=TWZgMg56YMQ
 
 ---
 ---
+
 ## 参考
 - アニメーションで揺れる服
 [Blender Tutorial - Cloth Simulation | Advance Simulation | Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
@@ -125,3 +135,13 @@ https://www.youtube.com/watch?v=TWZgMg56YMQ
 
 - パーティクル
 [![](https://img.youtube.com/vi/wHfR0DC-nQc/0.jpg)](https://www.youtube.com/watch?v=wHfR0DC-nQc){:target="_blank"}
+
+
+---
+---
+
+## お疲れ様ー
+- ここまででかなりのことができることを学んだと思う
+- 次週からはノードというのを扱って行くよ。
+- これまでも、ちょこちょこ触ってみたけど、きちんと理解するといろんなことができるみたい。
+- ノード2回やってから、そのあとコンポジット(あ、これもノード)とモーショントラッキングやっていくよ
