--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -114,7 +114,7 @@
 の2種類がある。
 
 
-[参考](https://horohorori.com/blender-note/physics-simulations/about-particles-system/){:target="_blank"}
+[参考：パーティクルについてのまとめ](https://horohorori.com/blender-note/physics-simulations/about-particles-system/){:target="_blank"}
 
 <!--
 https://www.youtube.com/watch?v=TWZgMg56YMQ
@@ -125,6 +125,7 @@ https://www.youtube.com/watch?v=TWZgMg56YMQ
 
 ## 参考
 - アニメーションで揺れる服
+
 [Blender Tutorial - Cloth Simulation | Advance Simulation | Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
 
 - ダイナミックペイント
