--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -126,7 +126,7 @@ https://www.youtube.com/watch?v=TWZgMg56YMQ
 ## 参考
 - アニメーションで揺れる服
 
-[Blender Tutorial - Cloth Simulation | Advance Simulation | Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
+[Blender Tutorial - Cloth Simulation Advance Simulation | Blender 2.9](https://www.youtube.com/watch?v=AbyfuW5Aocg){:target="_blank"}
 
 - ダイナミックペイント
 
