--- a/2022/MediaRepresentationV/mr5_12.md
+++ b/2022/MediaRepresentationV/mr5_12.md
@@ -53,6 +53,7 @@
 - 線の削除 Ctrl+右ドラッグ
 - テキスチャセットアップ Ctrl+T
 - プリンシプルセットアップ Ctrl+Shift+T
+- ビューアー Ctrl+Shift+クリック
 - 複数のノードをグループにすることができる
 - 数値のところに「#frame」とすることで、フレームを反映させることができる
 - 他も便利なのがあるけど、無理はせずに、使うものから身につけていこう
