--- a/2022/MediaRepresentationV/mr5_12.md
+++ b/2022/MediaRepresentationV/mr5_12.md
@@ -58,7 +58,7 @@
 - 数値のところに「#frame」とすることで、フレームを反映させることができる
 - 他も便利なのがあるけど、無理はせずに、使うものから身につけていこう
 
-[参考：Node Wranglerの使い方解説 | シェーダーエディター向け必須アドオン！](https://vook.vc/n/2610){:target="_blank"}
+[参考：Node Wranglerの使い方解説 シェーダーエディター向け必須アドオン！](https://vook.vc/n/2610){:target="_blank"}
 
 ---
 ---
@@ -244,7 +244,7 @@
 - Thicknessをマイナスの値にする(太さ)
 - BaseColorを黒にし、EmissionのColorでアウトラインの色を決める
 
-[参考：](https://www.youtube.com/watch?v=DmX2s6mFE1I){:target="_blank"}
+[参考：３Ｄキャラモデルにアウトラインをつける方法](https://www.youtube.com/watch?v=DmX2s6mFE1I){:target="_blank"}
 
 ---
 ---
