--- a/2022/MediaRepresentationV/mr5_12.md
+++ b/2022/MediaRepresentationV/mr5_12.md
@@ -189,12 +189,12 @@
 - BrickTextureをColorRampの前へ(FacからFacへ)
 - BrickTextureを選択してCtrl+T
 - ColorRampを選択してCtrl+Shift+クリックで出力をみてみよう
-- Mappingのscaleをかえるといろいろかわるね
+- ColorRampの色の位置を変えてみよう。
+- Mappingのscaleをかえるとサイズかわるね
 - MixShaderを選択してCtrl+Shift+クリックで元に戻そう
 
 ### 楽しもう
 - BrickTextureをVoronoiTexutureに変更しよう
-- BrickTexutureを選択してMを押すと非アクティブになる
 - Volonoiは白黒じゃなくて、グレーがあり、ランダムなのが特徴的
 - ColorRampの白を左にずらし、Constantにしよう
 - ColorRampは白黒で入ってきた情報を、違う色に変化することができるね。
@@ -229,7 +229,7 @@
 ---
 ## やってみようPart3
 ### セルルック
-- 新しく作って、Susann絵追加
+- 新しく作って、Susann追加
 - BSDFの出力にシェーダーtoRGBで白黒にして
 - ColorRampで色光あたってる、あたってないとこの色を指定する。
 
@@ -237,7 +237,7 @@
 
 ### 輪郭
 - アウトライン用のマテリアルを追加(Outline)
-- SettingからBackface Cullingにチェックを入れる
+- SettingからBackface Cullingにチェック, Shadow ModeをNone
 - Soldifyモディファイアを追加
 - OutlineがSlot2のため、Material Index Offsetを2に
 - Flip Normalsにチェック
